@@ -183,6 +183,15 @@ void netlist::Operation::reduce() {
 
   // change to simpler types of operation if possible
   switch(otype) {
+  case oVar: {
+    SP_CAST(m, VIdentifier, data);
+    if(m->is_valuable()) {
+      data.reset(new Number(m->get_value()));
+      otype = oNum;
+      valuable = true;
+    }
+    break;
+  }
   case oCon: {
     Concatenation& mcon = *(static_pointer_cast<Concatenation>(data));
     if(mcon.data.size() == 1 &&
@@ -209,6 +218,7 @@ bool netlist::Operation::elaborate(NetComp::elab_result_t &result, const NetComp
 
   if(otype == oVar) {
     rv &= data->elaborate(result, NetComp::tExp);
+    if(!rv) return rv;
     SP_CAST(m, VIdentifier, data);
     if(m->is_valuable()) {
       data.reset(new Number(m->get_value()));
@@ -217,6 +227,7 @@ bool netlist::Operation::elaborate(NetComp::elab_result_t &result, const NetComp
     }
   } else if(otype == oCon) {
     rv &= data->elaborate(result, NetComp::tExp);
+    if(!rv) return rv;
     SP_CAST(m, Concatenation, data);
     if(m->is_valuable()) {
       data.reset(new Number(m->get_value()));
