@@ -42,7 +42,7 @@ namespace netlist {
     Range() : NetComp(tRange), dim(false), rtype(TR_Err) { }
     Range(const mpz_class&);	/* select by a fix number */
     Range(const shell::location&, const mpz_class&);	/* select by a fix number */
-    Range(const mpz_class&, const mpz_class&);	/* select by a fix number */
+    Range(const Number&, const Number&);	/* select by a fix number */
     Range(const shell::location&, const mpz_class&, const mpz_class&);	/* select by a fix number */
     Range(const boost::shared_ptr<Expression>&);	/* select by an expression  */
     Range(const shell::location&, const boost::shared_ptr<Expression>&);	/* select by an expression  */
@@ -61,6 +61,8 @@ namespace netlist {
     bool is_valuable() const { return (rtype == TR_Const || rtype == TR_CRange|| rtype == TR_Empty); }
     bool is_valuable_tree() const;
     bool is_valid() const { return rtype != TR_Err; }
+    bool is_selection(bool&) const; // only used by RangeArray
+    std::pair<long, long> get_plain_range() const;
     Range const_copy(bool tree = false, const Range& maxRange = Range()) const; // copy the const content
     Range& const_reduce(const Range& maxRange = Range());   // symbolic reduce
     Range op_and(const Range&) const;           /* helper for operator & */
@@ -74,6 +76,7 @@ namespace netlist {
     bool op_belong_to(const Range&) const;      /* helper for >= */
     bool op_adjacent_to(const Range&) const;    // return true if rhs and this have shared area or connected
     bool op_higher(const Range&) const;    // return true if the range of this is higher than rhs
+    void get_flat_range(const Range&, std::pair<Number, Number>&) const; // get the flat select from multi-dimension range
     std::ostream& streamout(std::ostream& os, unsigned int indent, const std::string& prefix, bool decl = false, bool dim_or_range = false) const;
     // inherit from NetComp
     NETLIST_SET_FATHER_DECL;
@@ -110,6 +113,7 @@ namespace netlist {
   /* whether lhs belongs to rhs */
   inline bool operator<= ( const Range& lhs, const Range& rhs) { return lhs.op_belong_to(rhs); }
   inline bool operator== ( const Range& lhs, const Range& rhs) { return lhs.op_equ(rhs); }
+  inline bool operator!= ( const Range& lhs, const Range& rhs) { return !lhs.op_equ(rhs); }
   inline bool operator> ( const Range& lhs, const Range& rhs) { return lhs.op_higher(rhs); }
 
   NETLIST_STREAMOUT(Range)
