@@ -27,12 +27,14 @@
  */
 
 #include "component.h"
+#include "shell/env.h"
 #include <algorithm>
 
 using namespace netlist;
 using std::ostream;
 using std::string;
 using std::vector;
+using std::pair;
 using std::for_each;
 using boost::shared_ptr;
 using shell::location;
@@ -49,6 +51,14 @@ bool netlist::RangeArray::is_valuable() {
   return rv;
 }
 
+bool netlist::RangeArray::is_valuable() const {
+  // if once const reduced, it must be valuable
+  if(const_reduced || child.empty() ) return true;
+  
+  // otherwise check it
+  return RangeArrayCommon::is_valuable();
+}
+
 bool netlist::RangeArray::is_declaration() const {
   if(child.empty()) return true; // no range at all means 1 bit
   else if(child.size() > 1) return false;
@@ -58,6 +68,25 @@ bool netlist::RangeArray::is_declaration() const {
       if(m.is_empty()) return false; // declaration should not have empty range expression
       if(m.RangeArrayCommon::size() > 1) return false;
       if(m.RangeArrayCommon::size() == 1) m = m.RangeArrayCommon::front();
+      else 
+        break;
+    }
+    return true;
+  }
+}
+
+bool netlist::RangeArray::is_selection() const {
+  if(child.empty()) return true; // no range at all means 1 bit
+  else if(child.size() > 1) return false;
+  else {
+    Range m = *(child.front());
+    bool m_leaf = false;
+    while(true) {
+      if(!m.is_selection(m_leaf)) return false;
+      if(m.RangeArrayCommon::size() > 1) return false;
+      if(m.RangeArrayCommon::size() == 1) {
+        m = m.RangeArrayCommon::front();
+      }
       else 
         break;
     }
@@ -95,6 +124,7 @@ RangeArray netlist::RangeArray::op_and(const RangeArray& rhs) const {
   RangeArray rv;
   rv.child = RangeArrayCommon::op_and(rhs.child);
   rv.const_reduced = const_reduced & rhs.const_reduced;
+  //std::cout << "RangeArray &: " << *this << "; " << rhs << "; " << rv << std::endl;
   return rv;
 }
 
@@ -116,7 +146,27 @@ RangeArray netlist::RangeArray::op_deduct(const RangeArray& rhs) const {
 }
 
 bool netlist::RangeArray::op_equ(const RangeArray& rhs) const {
-  return RangeArrayCommon::op_equ(rhs.child);
+  RangeArray m;
+  m.child.push_back(shared_ptr<Range>(new Range(0))); // 1-bit
+  if(child.empty()) return (rhs.child.empty() || m.RangeArrayCommon::op_equ(rhs.child));
+  else if(rhs.child.empty()) return m.RangeArrayCommon::op_equ(child);
+  else return RangeArrayCommon::op_equ(rhs.child);
+}
+
+Range netlist::RangeArray::get_flat_range(const RangeArray& select) const {
+  if(child.empty()) {
+    return Range(0);
+  }
+  else {
+    pair<Number, Number> raw_range(0,0);
+    if(select.child.empty()) 
+      front().get_flat_range(front(), raw_range);
+    else {
+      assert(*this >= select.const_copy(*this));
+      front().get_flat_range(select.front(), raw_range);
+    }
+    return Range(raw_range.first - 1, raw_range.second);
+  }
 }
 
 void netlist::RangeArray::add_range(const shared_ptr<Range>& rhs) {
@@ -166,6 +216,7 @@ bool netlist::RangeArray::elaborate(elab_result_t &result, const ctype_t mctype,
 
 bool netlist::operator>= (const RangeArray& lhs, const RangeArray& rhs) {
   RangeArray tmp = lhs & rhs;
+  //std::cout << "RangeArray >=: " << lhs << "; " << rhs << "; " << tmp  << " -> " << (tmp == rhs) << std::endl;
   return tmp == rhs;
 }
 
